[package]
name = "onion_scraper"
version = "0.1.0"
edition = "2021"
authors = ["Daniel (MrHoss) Souza"]
license = "GPL-3.0"
description = "A multithreaded .onion discovery tool for the Tor network"
readme = "README.md"
repository = "https://github.com/MrHoss/onion-scraper"

[dependencies]
reqwest = { version = "0.12.15", features = ["blocking", "socks", "rustls-tls"] }
dotenv = "0.15"
rand = "0.9.0"
tokio = { version = "1.37", features = ["full"], optional = true }

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = "symbols"

[[bin]]
name = "onion_scraper"
path = "src/main.rs"